# erl_comm

./: .gitignore  README.md  pyproject.toml
scripts/: test_api.py
src/erl_comm/: http_client.py
