[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erl_comm"
version = "0.0.1"
authors = [
    { name="Minh Nguyen", email="minh@mail.minhnh.com" }
]
description = """
A package for robot communication during ERL competitions.
"""
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
dependencies = ['requests']

[project.urls]
"Homepage" = "https://github.com/minhnh/"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
